<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gamaliev.notes.list.ListFragment">


    <!-- Recycler view -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/fragment_list_rv_padding_top"
        android:paddingBottom="@dimen/fragment_list_rv_padding_bottom"
        android:scrollbars="vertical"/>


    <!-- Found button -->
    <Button
        android:id="@+id/fragment_list_button_found"
        android:layout_width="@dimen/fragment_list_button_found_width"
        android:layout_height="@dimen/fragment_list_button_found_height"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fragment_list_button_found_margin"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <!-- FAB -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fragment_list_fab"
        android:src="@drawable/ic_add_white_24dp"
        android:clickable="true"
        app:fabSize="normal"
        app:backgroundTint="@color/color_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fragment_list_fab_margin" />

</android.support.design.widget.CoordinatorLayout>

