...
    <!-- Palette icons -->
    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_palette_swipe"
        style="@style/ColorPickerHelperIcons"
        android:contentDescription="@string/fragment_color_picker_ic_helper_swipe"
        app:srcCompat="@drawable/ic_swap_horiz_black_36dp"
        android:layout_below="@+id/fragment_color_picker_scroll_palette_bar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/fragment_color_picker_image_ic_helper_palette_swipe_margin"
        android:layout_marginEnd="@dimen/fragment_color_picker_image_ic_helper_palette_swipe_margin"/>

    <ImageView
        android:id="@+id/fragment_color_picker_image_ic_helper_palette_move"
...
