...
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            tools:ignore="UselessParent">

            <!-- Color box -->
            <FrameLayout
                android:id="@+id/fragment_item_details_color"
                android:layout_width="@dimen/fragment_item_details_ff_color_radius"
                android:layout_height="@dimen/fragment_item_details_ff_color_radius"
                android:layout_marginStart="@dimen/fragment_item_details_ff_color_margin_start"
                android:layout_marginBottom="@dimen/fragment_item_details_ff_color_margin_bottom"
                android:layout_gravity="bottom"/>

...
