...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- Cancel button -->
        <Button
            android:id="@+id/fragment_list_filter_dialog_action_button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_list_filter_dialog_action_button_cancel_text"
            tools:ignore="ButtonOrder"/>

        <!-- Filter button -->
        <Button
            android:id="@+id/fragment_list_filter_dialog_action_button_filter"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fragment_list_filter_dialog_action_button_filter_margin_end"
            android:text="@string/fragment_list_filter_dialog_action_button_filter_text" />

...
