<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search widget -->
    <item android:id="@+id/menu_list_search"
        android:title="@string/menu_list_search_title"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="10"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!-- Filter / Sort menu item -->
    <item android:id="@+id/menu_list_filter_sort"
        android:title="@string/menu_list_action_filter_sort_title"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="20"
        app:showAsAction="always"/>

</menu>