...
    <!--                -->

    <!-- Activity -->
    <string name="activity_main">Notes</string>

    <!-- Navigation drawer -->
    <string name="activity_main_nav_drawer_open">Open navigation drawer</string>
    <string name="activity_main_nav_drawer_close">Close navigation drawer</string>
    <string name="activity_main_nav_drawer_item_add_mock_entries">Add mock entries</string>
    <!--<string name="activity_main_nav_drawer_item_delete_all_entries">Delete all</string>-->
    <string name="activity_main_nav_drawer_item_import_entries">Import notes</string>
    <string name="activity_main_nav_drawer_item_export_entries">Export notes</string>
    <string name="activity_main_nav_drawer_item_notes_list">Notes list</string>
    <string name="activity_main_nav_drawer_item_sync">Synchronization</string>
    <string name="activity_main_nav_drawer_item_change_user">Change user</string>
    <string name="activity_main_nav_drawer_item_settings">Settings</string>
    <string name="activity_main_nav_drawable_header_image_view_description">Notes</string>

    <!-- Mock entries -->
    <string name="activity_main_notification_add_mock_entries_success">Mock entries added</string>
    <string name="activity_main_notification_add_mock_entries_failed">Mock entries adding failed</string>
...
    <string name="fragment_list_filter_dialog_filter_by_created_title_text">Created:</string>
    <string name="fragment_list_filter_dialog_filter_by_edited_title_text">Edited:</string>
    <string name="fragment_list_filter_dialog_filter_by_viewed_title_text">Viewed:</string>
    <string name="fragment_list_filter_dialog_profiles_save_current_button_text">Add current</string>
    <string name="fragment_list_filter_dialog_profiles_reset_text">reset</string>
    <string name="fragment_list_filter_dialog_order_manually_text">manually</string>
    <string name="fragment_list_filter_dialog_order_title_text">title</string>
    <string name="fragment_list_filter_dialog_order_created_text">created</string>
    <string name="fragment_list_filter_dialog_order_edited_text">edited</string>
    <string name="fragment_list_filter_dialog_order_viewed_text">viewed</string>
    <string name="fragment_list_filter_dialog_order_asc_text">ascending</string>
    <string name="fragment_list_filter_dialog_order_desc_text">descending</string>
    <string name="fragment_list_filter_dialog_profile_delete_text">Delete profile</string>
...

    <!-- Conflict warning -->
    <string name="fragment_sync_conflicting_exists_notification_title_tv_text">Conflicting is exists, tap to check</string>

    <!-- Menu options -->
    <string name="menu_sync_action_synchronize">Synchronize</string>
    <string name="menu_sync_action_show_conflicted">Show conflicted</string>
    <string name="menu_sync_action_delete_all_from_server">Delete all from server</string>
    <string name="menu_sync_action_clear_journal">Clear journal</string>
    <string name="menu_sync_action_clear_journal_success">Sync journal cleared</string>
    <string name="menu_sync_action_clear_journal_failed">Sync journal clearing failed</string>

    <!-- Status -->
...
