<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gamaliev.notes.main.MainActivity">


    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/activity_main_toolbar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:targetApi="lollipop"/>


    <!-- FrameLayout -->
    <FrameLayout
        android:id="@+id/activity_main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>

