...
                android:textSize="@dimen/fragment_user_item_description_text_size"/>

        </LinearLayout>

        <!-- Button. Configure -->
        <ImageButton
            android:id="@+id/fragment_user_item_configure_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/fragment_user_item_button_width"
            android:layout_height="match_parent"
            android:contentDescription="@string/fragment_user_item_configure_button_description"
            android:src="@drawable/ic_settings_black_24dp"
            android:tint="@color/color_picker_default"/>
...
